--- a/heima_ssm/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
+++ b/heima_ssm/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,11 @@
           http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
   <display-name>Archetype Created Web Application</display-name>
-  
+
+  <error-page>
+    <error-code>403</error-code>
+    <location>/403.jsp</location>
+  </error-page>
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring.xml,classpath:spring-security.xml</param-value>
